5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1828_3179.log
== SUBMITION (2019-06-12 14:53:05) 
-- CODE:
from numpy import*

vet1 = eval(input("digite: "))
vet2 = zeros(vet1, dtype= int)

cont = 0
j = -1

for in range(len(vet1)):
	if vet1[i] != 1:
		vet3[cont] = vet1[i]
		cont = cont + 1 
	else:
		vet2[j] = vet1[i]
		j = j - 1
print(vet2)

-- EXECUTION TIME:
0.60688
-- ERROR:
  File "/home/codebench/codes/1828/3179/main.py", line 9
    for in range(len(vet1)):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:16) 
-- CODE:
from numpy import*

vet1 = eval(input("digite: "))
vet2 = zeros(vet1, dtype= int)

cont = 0
j = -1

for in range(len(vet1)):
	if vet1[i] != 1:
		vet3[cont] = vet1[i]
		cont = cont + 1 
	else:
		vet2[j] = vet1[i]
		j = j - 1
print(vet2)

-- ERROR:
File "XXXX", line 9
    for in range(len(vet1)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:29) 
-- CODE:
from numpy import*

vet1 = eval(input("digite: "))
vet2 = zeros(vet1, dtype= int)

cont = 0
j = -1

for j in range(len(vet1)):
	if vet1[i] != 1:
		vet3[cont] = vet1[i]
		cont = cont + 1 
	else:
		vet2[j] = vet1[i]
		j = j - 1
print(vet2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:53:30) 
-- CODE:
from numpy import*

vet1 = eval(input("digite: "))
vet2 = zeros(vet1, dtype= int)

cont = 0
j = -1

for j in range(len(vet1)):
	if vet1[i] != 1:
		vet3[cont] = vet1[i]
		cont = cont + 1 
	else:
		vet2[j] = vet1[i]
		j = j - 1
print(vet2)

-- EXECUTION TIME:
1.04531
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/3179/main.py", line 4, in <module>
    vet2 = zeros(vet1, dtype= int)
ValueError: negative dimensions are not allowed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:53:59) 
-- CODE:
from numpy import*

vet1 = eval(input("digite: "))
vet2 = zeros(vet1, dtype= int)

cont = 0
j = -1

for i in range(len(vet1)):
	if vet1[i] != 1:
		vet3[cont] = vet1[i]
		cont = cont + 1 
	else:
		vet2[j] = vet1[i]
		j = j - 1
print(vet2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:54:25) 
-- CODE:
from numpy import*

vet1 = eval(input("digite: "))
vet2 = zeros(vet1, dtype= int)

cont = 0
j = -1

for i in range(len(vet1)):
	if vet1[i] != 1:
		vet2[cont] = vet1[i]
		cont = cont + 1 
	else:
		vet2[j] = vet1[i]
		j = j - 1
print(vet2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
